|uPDATE| 지도 검색 기록 반환 DTO 날짜 필드 추가