@@ -7,7 +7,10 @@ import com.capstone.planet.Model.DAO.PostSearchHistoryDAO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Component
 public class GetMapHistoryBean {
@@ -20,16 +23,19 @@ public class GetMapHistoryBean {
     }
 
     // 지도 히스토리 조회
-    public List<String> exec(Long userId){
-
+    public List<Map<String, String>> exec(Long userId) {
         List<MapSearchHistoryDAO> mapSearchHistoryDAOS = getMapSearchHistoryDAOBean.exec(userId);
 
         if (mapSearchHistoryDAOS == null) {
             return List.of();
-        }
-        else
+        } else {
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MM.dd");
             return mapSearchHistoryDAOS.stream()
-                    .map(MapSearchHistoryDAO::getSearch)
-                    .toList();
+                    .map(dao -> Map.of(
+                            "search", dao.getSearch(),
+                            "date", dao.getUploadTime().format(formatter)
+                    ))
+                    .collect(Collectors.toList());
+        }
     }
 }
